--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.70",
+    "ai": "^3.4.29",
+    "eslint": "^9.13.0",
     "groq-sdk": "^0.7.0",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
@@ -21,7 +24,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^8.0.0",
