--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
