--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.70",
     "ai": "^3.4.29",
+    "axios": "^1.7.7",
     "eslint": "^9.13.0",
     "groq-sdk": "^0.7.0",
     "next": "15.0.1",
+    "ollama": "^0.5.9",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-markdown": "^9.0.1"
