--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "greg-chatbot",
+  "name": "gregs-chatbot",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,38 +11,36 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.70",
+    "@ai-sdk/openai": "^1.0.5",
+    "@eslint/eslintrc": "^3.2.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "ai": "^3.4.29",
-    "axios": "^1.7.7",
-    "class-variance-authority": "^0.7.0",
+    "@vercel/analytics": "^1.4.1",
+    "ai": "^4.0.9",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint": "^9.13.0",
-    "groq-sdk": "^0.7.0",
-    "lucide-react": "^0.456.0",
-    "next": "15.0.1",
-    "ollama": "^0.5.9",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "react-markdown": "^9.0.1",
-    "tailwind-merge": "^2.5.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
+    "lucide-react": "^0.462.0",
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.13.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint-config-next": "15.0.1",
-    "eslint-config-prettier": "^9.1.0",
+    "@eslint/js": "^9.16.0",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.16.0",
+    "eslint-config-next": "^15.0.3",
     "husky": "^8.0.0",
-    "lint-staged": "^15.2.10",
-    "postcss": "^8",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.1",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2"
   }
 }
