--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "lint-staged": "^15.2.10",
     "lucide-react": "^0.462.0",
     "next": "^15.0.3",
+    "prism": "link:react-syntax-highlighter/dist/esm/styles/prism",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
