--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.4.1",
     "ai": "^4.0.9",
     "class-variance-authority": "^0.7.1",
@@ -24,7 +25,6 @@
     "lint-staged": "^15.2.10",
     "lucide-react": "^0.462.0",
     "next": "^15.0.3",
-    "prism": "link:react-syntax-highlighter/dist/esm/styles/prism",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
