--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.0.5",
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@eslint/eslintrc": "^3.2.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
