--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/openai": "^1.0.5",
     "@auth0/nextjs-auth0": "^3.5.0",
     "@eslint/eslintrc": "^3.2.0",
+    "@prisma/client": "^6.0.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -26,6 +27,7 @@
     "lint-staged": "^15.2.10",
     "lucide-react": "^0.462.0",
     "next": "^15.0.3",
+    "prisma": "^6.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
