feat: add checkbox component

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react-syntax-highlighter": "^15.5.13",
