--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.0.5",
+    "@ai-sdk/openai": "^1.0.7",
     "@auth0/nextjs-auth0": "^3.5.0",
     "@eslint/eslintrc": "^3.2.0",
     "@prisma/client": "^6.0.1",
@@ -21,33 +21,34 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.4.1",
-    "ai": "^4.0.9",
+    "ai": "^4.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "lucide-react": "^0.462.0",
-    "next": "^15.0.3",
+    "next": "^15.0.4",
     "prisma": "^6.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "@types/node": "22.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.14",
+    "@types/react-dom": "^18.3.3",
     "eslint": "^9.16.0",
-    "eslint-config-next": "^15.0.3",
+    "eslint-config-next": "^15.0.4",
     "husky": "^8.0.0",
-    "prettier": "^3.4.1",
-    "tailwindcss": "^3.4.15",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
   }
 }
