--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.0.7",
+    "@ai-sdk/ui-utils": "^1.0.4",
     "@auth0/nextjs-auth0": "^3.5.0",
     "@eslint/eslintrc": "^3.2.0",
     "@prisma/client": "^6.0.1",
@@ -46,7 +47,6 @@
     "@types/react-dom": "^18.3.3",
     "eslint": "^9.16.0",
     "eslint-config-next": "^15.0.4",
-    "husky": "^8.0.0",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
