--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -26,6 +26,9 @@ jobs:
       - name: Install Vercel CLI
         run: pnpm add -g vercel@latest
 
+      - name: Log file structure
+        run: ls -R
+
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
