--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@eslint/eslintrc": "^3.2.0",
     "@prisma/client": "^6.0.1",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
-    "ai": "^4.0.14",
+    "ai": "^4.0.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
@@ -37,6 +37,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
+    "react-responsive": "^10.0.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
     "swr": "^2.2.5",
@@ -44,11 +45,11 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.16.0",
+    "@eslint/js": "^9.17.0",
     "@types/node": "22.10.1",
     "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.5",
-    "eslint": "^9.16.0",
+    "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.0",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.16",
