--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
-    "@types/react": "^19.0.3",
+    "@types/react": "18.2.55",
+  "@types/react-dom": "18.2.19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
@@ -34,8 +35,8 @@
     "lucide-react": "^0.469.0",
     "next": "^15.1.3",
     "prisma": "^6.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.3",
     "react-responsive": "^10.0.0",
@@ -49,7 +50,6 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "22.10.5",
-    "@types/react-dom": "^19.0.2",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.3",
     "prettier": "^3.4.2",
