--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@types/react": "18.2.55",
-  "@types/react-dom": "18.2.19",
+    "@types/react-dom": "18.2.19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
@@ -54,6 +54,10 @@
     "eslint-config-next": "^15.1.3",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
+  },
+  "prisma": {
+    "seed": "node ./prisma/seed.js"
   }
 }
