--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@ai-sdk/ui-utils": "^1.0.6",
     "@auth0/nextjs-auth0": "^3.5.0",
     "@eslint/eslintrc": "^3.2.0",
+    "@neondatabase/serverless": "^0.10.4",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/config": "^3.3.0",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
